--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -5,3 +5,27 @@ server:
 spring:
   profiles:
     active: dev
+  mvc:
+    pathmatch:
+      # 解决集成swagger启动报错 Failed to start bean ‘documentationPluginsBootstrapper‘
+      matching-strategy: ant_path_matcher
+  swagger:
+    enable: true
+    groupName: Api
+    basePackage: com.msutar
+    version: 1.0.0
+    title: cool-server
+    description: 开发文档
+    contactName: Esc.
+    contactEmail: nhx7527@qq.com
+    contactUrl: msutar.com
+
+
+mybatis-plus:
+  type-aliases-package: com.msutar.cool.api.entity
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    jdbc-type-for-null: null
+    # log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    banner: false
