--- a/api/pom.xml
+++ b/api/pom.xml
@@ -70,6 +70,13 @@
             <version>3.0.3</version>
         </dependency>
 
+        <!-- 验证码生成插件 -->
+        <dependency>
+            <groupId>com.github.whvcse</groupId>
+            <artifactId>easy-captcha</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
