--- a/api/src/main/resources/application-dev.yml
+++ b/api/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ spring:
     url: jdbc:mysql://192.168.229.233:3306/akwchat?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
     username: atm
     password: 3EVwKD4hIZQoFu66!@#
+  redis:
+    database: 0
+    host: 192.168.229.233
+    port: 6379
+    password: 123456
