--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -29,3 +29,6 @@ mybatis-plus:
     # log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     banner: false
+
+cool-server:
+  enable-redis-cache: true
