--- a/api/pom.xml
+++ b/api/pom.xml
@@ -58,6 +58,12 @@
             <version>5.7.22</version>
         </dependency>
 
+        <!-- redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <!--swagger-->
         <dependency>
             <groupId>io.springfox</groupId>
